--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2024"
 cpal = "0.16.0"
 defer-rs = "0.1.0"
 hide_console = "0.2.1"
-iced = { version ="0.13.1", features = ["canvas", "tokio", "advanced", "image"] }
+iced = { version ="0.13.1", features = ["canvas", "tokio", "image"] }
 windows = { version = "0.52", features = [
     "Win32_Media_Audio",
     "Win32_System_Com",
@@ -21,3 +21,8 @@ windows = { version = "0.52", features = [
 [build-dependencies]
 winres = "0.1"
 image = "0.25.6"
+
+[profile.release]
+panic = "abort"
+strip = true
+lto = true
